# dbt3

./: .dockerignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Containerfile.appimage  Containerfile.pgsql  Dockerfile.database  INSTALL  INSTALL.rst  Makefile.am  Makefile.cmake  QuickStart  README  README.rst  configure.ac  index.html
.github/workflows/: main.yml
appimage/: AppRun.in  activate  dbt3.appdata.xml  dbt3.desktop  org.osdl.dbt3.appdata.xml
container/: README.rst  build-pgsql  run-test
doc/: dbt3-user-guide.txt  dbt3-user.tex  dbt3.rst
docker/: Dockerfile  README.rst  build-pgsql  prepare-image  run-test
examples/: dbt3_pgsql_profile  dbt3_profile
examples/mysql/: dbt3_mysql_profile  my.cnf
examples/pgsql/: dbt3_pgsql_profile
examples/pgxl/: dbt3_pgxl_profile  pgxc_ctl.conf
man/man1/: CMakeLists.txt  dbt3-report.1.rst.in  dbt3-run.1.rst.in  dbt3.1.rst.in
patches/: CMakeLists.txt  dbt3-TPC-H_Tools_v3.0.0-monetdb.diff  dbt3-TPC-H_Tools_v3.0.0-mysql.diff  dbt3-TPC-H_Tools_v3.0.0-postgresql.diff  dbt3-TPC-H_Tools_v3.0.0-stdout.diff  dbt3-TPC-H_Tools_v3.0.0-virtuoso.diff  dbt3-TPC-H_v3.0.1-monetdb.diff  dbt3-TPC-H_v3.0.1-mysql.diff  dbt3-TPC-H_v3.0.1-postgresql.diff  dbt3-TPC-H_v3.0.1-stdout.diff  dbt3-TPC-H_v3.0.1-virtuoso.diff  series
queries/: CMakeLists.txt
queries/monetdb/: 1.sql  15.sql  20.sql  22.sql  CMakeLists.txt
queries/pgsql/: 20.sql
queries/pgsqle/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  (+12 more)
scripts/: CMakeLists.txt  Makefile.am  dbt3-build-dbgen.in  dbt3-compare-results  dbt3-compare-results.in  dbt3-composite-score  dbt3-gen-report  dbt3-generate-report  dbt3-generate-report.in  dbt3-get-config  dbt3-get-config.in  dbt3-load-test  dbt3-load-test.in  dbt3-plot-results  dbt3-plot-results.in  dbt3-post-process  dbt3-post-process.in  dbt3-power-score  dbt3-power-score.in  dbt3-power-test  dbt3-power-test.in  dbt3-report.in  dbt3-run-query.in  dbt3-run-workload  dbt3-run.in  dbt3-sysstats  dbt3-sysstats.in  dbt3-throughput-score  dbt3-throughput-score.in  dbt3-throughput-stream  dbt3-throughput-stream-wrapper  dbt3-throughput-stream-wrapper.in  dbt3-throughput-stream.in  dbt3-throughput-test  dbt3-throughput-test.in  dbt3.in  dbt3_profile.in  gen_data.sh  get-throughput  get_composite.sh
scripts/monetdb/: CMakeLists.txt  Makefile.am  dbt3-monetdb-create-db  dbt3-monetdb-create-db.in  dbt3-monetdb-create-tables  dbt3-monetdb-create-tables.in  dbt3-monetdb-dbstat  dbt3-monetdb-dbstat.in  dbt3-monetdb-drop-tables  dbt3-monetdb-drop-tables.in  dbt3-monetdb-get-query-time  dbt3-monetdb-get-query-time.in  dbt3-monetdb-get-version  dbt3-monetdb-get-version.in  dbt3-monetdb-load-data  dbt3-monetdb-load-data.in  dbt3-monetdb-load-test  dbt3-monetdb-load-test.in  dbt3-monetdb-rf1  dbt3-monetdb-rf1.in  dbt3-monetdb-rf2  dbt3-monetdb-rf2.in  dbt3-monetdb-start-db  dbt3-monetdb-start-db.in  dbt3-monetdb-stop-db  dbt3-monetdb-stop-db.in  dbt3-monetdb-time-statistics  dbt3-monetdb-time-statistics.in
scripts/mysql/: CMakeLists.txt  Makefile.am  dbt3-mysql-create-db  dbt3-mysql-create-db.in  dbt3-mysql-create-indexes  dbt3-mysql-create-tables  dbt3-mysql-create-tables.in  dbt3-mysql-dbstat  dbt3-mysql-dbstat.in  dbt3-mysql-drop-db  dbt3-mysql-drop-db.in  dbt3-mysql-drop-tables  dbt3-mysql-drop-tables.in  dbt3-mysql-get-query-time  dbt3-mysql-get-query-time.in  dbt3-mysql-get-version  dbt3-mysql-get-version.in  dbt3-mysql-load-data  dbt3-mysql-load-data.in  dbt3-mysql-load-test  dbt3-mysql-power-test  dbt3-mysql-rf1  dbt3-mysql-rf1.in  dbt3-mysql-rf2  dbt3-mysql-rf2.in  dbt3-mysql-start-db  dbt3-mysql-start-db.in  dbt3-mysql-stop-db  dbt3-mysql-stop-db.in  dbt3-mysql-throughput-stream  dbt3-mysql-throughput-stream-wrapper  dbt3-mysql-throughput-test  dbt3-mysql-time-statistics  dbt3-mysql-time-statistics.in
scripts/pgsql/: CMakeLists.txt  Makefile.am  db_stats.sh.in  dbt3-pgsql-create-db  dbt3-pgsql-create-db.in  dbt3-pgsql-create-indexes  dbt3-pgsql-create-tables  dbt3-pgsql-create-tables.in  dbt3-pgsql-dbstat  dbt3-pgsql-dbstat.in  dbt3-pgsql-drop-db  dbt3-pgsql-drop-db.in  dbt3-pgsql-drop-tables  dbt3-pgsql-drop-tables.in  dbt3-pgsql-get-query-time  dbt3-pgsql-get-query-time.in  dbt3-pgsql-get-version  dbt3-pgsql-get-version.in  dbt3-pgsql-load-data  dbt3-pgsql-load-data.in  dbt3-pgsql-load-test  dbt3-pgsql-plan-disaster  dbt3-pgsql-plan-disaster.in  dbt3-pgsql-power-test  dbt3-pgsql-report  dbt3-pgsql-report.in  dbt3-pgsql-rf1  dbt3-pgsql-rf1.in  dbt3-pgsql-rf2  dbt3-pgsql-rf2.in  dbt3-pgsql-start-db  dbt3-pgsql-start-db.in  dbt3-pgsql-stop-db  dbt3-pgsql-stop-db.in  dbt3-pgsql-throughput-stream  dbt3-pgsql-throughput-stream-wrapper  dbt3-pgsql-throughput-test  dbt3-pgsql-time-statistics  dbt3-pgsql-time-statistics.in  pgsql_profile.in  (+5 more)
scripts/pgxl/: CMakeLists.txt  Makefile.am  dbt3-pgxl-create-db  dbt3-pgxl-create-db.in  dbt3-pgxl-create-tables  dbt3-pgxl-create-tables.in  dbt3-pgxl-dbstat  dbt3-pgxl-drop-tables  dbt3-pgxl-drop-tables.in  dbt3-pgxl-load-data  dbt3-pgxl-load-data.in  dbt3-pgxl-load-test  dbt3-pgxl-start-db  dbt3-pgxl-start-db.in  dbt3-pgxl-stop-db  dbt3-pgxl-stop-db.in  dbt3-pgxl-time-statistics.in
scripts/virtuoso/: CMakeLists.txt  Makefile.am  dbt3-virtuoso-create-db  dbt3-virtuoso-create-db.in  dbt3-virtuoso-create-tables  dbt3-virtuoso-create-tables.in  dbt3-virtuoso-dbstat  dbt3-virtuoso-dbstat.in  dbt3-virtuoso-drop-tables  dbt3-virtuoso-drop-tables.in  dbt3-virtuoso-get-query-time  dbt3-virtuoso-get-query-time.in  dbt3-virtuoso-get-version  dbt3-virtuoso-get-version.in  dbt3-virtuoso-load-data.in  dbt3-virtuoso-load-test  dbt3-virtuoso-load-test.in  dbt3-virtuoso-rf1  dbt3-virtuoso-rf1.in  dbt3-virtuoso-rf2  dbt3-virtuoso-rf2.in  dbt3-virtuoso-start-db  dbt3-virtuoso-start-db.in  dbt3-virtuoso-stop-db  dbt3-virtuoso-stop-db.in  dbt3-virtuoso-time-statistics  dbt3-virtuoso-time-statistics.in
src/: Makefile.am
src/dbgen/: Makefile.am  bm_utils.c  driver.c  dss.h  print.c  qgen.c  tpcd.h
tools/: README.rst  build-appimage  build-appimage-container  build-pgsql  run-test
(+56 files in other folders)
