#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2005      Open Source Development Labs, Inc.
#               2005-2015 Mark Wong
#               2015      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

SUBDIRS = scripts src

EXTRA_DIST = \
		doc/dbt3-user-guide.txt \
		queries/pgsql/1.sql \
		queries/pgsql/10.sql \
		queries/pgsql/11.sql \
		queries/pgsql/12.sql \
		queries/pgsql/13.sql \
		queries/pgsql/14.sql \
		queries/pgsql/15.sql \
		queries/pgsql/16.sql \
		queries/pgsql/17.sql \
		queries/pgsql/18.sql \
		queries/pgsql/19.sql \
		queries/pgsql/2.sql \
		queries/pgsql/20.sql \
		queries/pgsql/21.sql \
		queries/pgsql/22.sql \
		queries/pgsql/3.sql \
		queries/pgsql/4.sql \
		queries/pgsql/5.sql \
		queries/pgsql/6.sql \
		queries/pgsql/7.sql \
		queries/pgsql/8.sql \
		queries/pgsql/9.sql \
		queries/mysql/1.sql \
		queries/mysql/10.sql \
		queries/mysql/11.sql \
		queries/mysql/12.sql \
		queries/mysql/13.sql \
		queries/mysql/14.sql \
		queries/mysql/15.sql \
		queries/mysql/16.sql \
		queries/mysql/17.sql \
		queries/mysql/18.sql \
		queries/mysql/19.sql \
		queries/mysql/2.sql \
		queries/mysql/20.sql \
		queries/mysql/21.sql \
		queries/mysql/22.sql \
		queries/mysql/3.sql \
		queries/mysql/4.sql \
		queries/mysql/5.sql \
		queries/mysql/6.sql \
		queries/mysql/7.sql \
		queries/mysql/8.sql \
		queries/mysql/9.sql \
		queries/sapdb/1.sql \
		queries/sapdb/10.sql \
		queries/sapdb/11.sql \
		queries/sapdb/12.sql \
		queries/sapdb/13.sql \
		queries/sapdb/14.sql \
		queries/sapdb/15.sql \
		queries/sapdb/16.sql \
		queries/sapdb/17.sql \
		queries/sapdb/18.sql \
		queries/sapdb/18rewrite.sql \
		queries/sapdb/19.sql \
		queries/sapdb/19rewrite.sql \
		queries/sapdb/2.sql \
		queries/sapdb/20.sql \
		queries/sapdb/20rewrite.sql \
		queries/sapdb/21.sql \
		queries/sapdb/22.sql \
		queries/sapdb/22rewrite.sql \
		queries/sapdb/3.sql \
		queries/sapdb/4.sql \
		queries/sapdb/5.sql \
		queries/sapdb/6.sql \
		queries/sapdb/7.sql \
		queries/sapdb/8.sql \
		queries/sapdb/9.sql
