#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2014      Mark Wong
#               2014      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

SUBDIRS = mysql pgsql sapdb

bin_SCRIPTS = dbt3-composite-score \
		dbt3-gen-report \
		dbt3-get-config \
		dbt3-plot-results \
		dbt3-post-process \
		dbt3-power-score \
		dbt3-run-workload \
		dbt3-sysstats \
		dbt3-throughput-score
