#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2014      Mark Wong
#               2014      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

SUBDIRS = monetdb mysql pgsql pgxl sapdb

dist_bin_SCRIPTS = dbt3-compare-results \
		dbt3-composite-score \
		dbt3-generate-report \
		dbt3-get-config \
		dbt3-plot-results \
		dbt3-post-process \
		dbt3-power-score \
		dbt3-power-test \
		dbt3-run-workload \
		dbt3-sysstats \
		dbt3-throughput-score \
		dbt3-throughput-stream \
		dbt3-throughput-stream-wrapper \
		dbt3-throughput-test
