#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2015      Mark Wong
#               2015      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

dist_bin_SCRIPTS = dbt3-monetdb-create-db \
		dbt3-monetdb-start-db \
		dbt3-monetdb-stop-db
