#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2015      Mark Wong
#               2015      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

dist_bin_SCRIPTS = dbt3-monetdb-create-db \
		dbt3-monetdb-create-tables \
		dbt3-monetdb-dbstat \
		dbt3-monetdb-drop-tables \
		dbt3-monetdb-load-data \
		dbt3-monetdb-get-query-time \
		dbt3-monetdb-get-version \
		dbt3-monetdb-rf1 \
		dbt3-monetdb-rf2 \
		dbt3-monetdb-start-db \
		dbt3-monetdb-stop-db \
		dbt3-monetdb-time-statistics
