#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2014      Mark Wong
#               2014      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

bin_SCRIPTS = dbt3-mysql-backup \
		dbt3-mysql-create-db \
		dbt3-mysql-create-tables \
		dbt3-mysql-dbstat \
		dbt3-mysql-drop-db \
		dbt3-mysql-drop-tables \
		dbt3-mysql-get-query-time \
		dbt3-mysql-get-version \
		dbt3-mysql-load-data \
		dbt3-mysql-load-test \
		dbt3-mysql-power-test \
		dbt3-mysql-restore \
		dbt3-mysql-rf1 \
		dbt3-mysql-rf2 \
		dbt3-mysql-start-db \
		dbt3-mysql-stop-db \
		dbt3-mysql-throughput-stream \
		dbt3-mysql-throughput-stream-wrapper \
		dbt3-mysql-throughput-test \
		dbt3-mysql-time-statistics
