#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2014      Mark Wong
#               2014      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

bin_SCRIPTS = dbt3-pgsql-create-db \
		dbt3-pgsql-create-tables \
		dbt3-pgsql-dbstat \
		dbt3-pgsql-drop-db \
		dbt3-pgsql-drop-tables \
		dbt3-pgsql-get-query-time \
		dbt3-pgsql-get-version \
		dbt3-pgsql-load-data \
		dbt3-pgsql-load-test \
		dbt3-pgsql-plan-disaster \
		dbt3-pgsql-rf1 \
		dbt3-pgsql-rf2 \
		dbt3-pgsql-start-db \
		dbt3-pgsql-stop-db \
		dbt3-pgsql-throughput-stream \
		dbt3-pgsql-throughput-stream-wrapper \
		dbt3-pgsql-throughput-test \
		dbt3-pgsql-time-statistics
