#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2015      Mark Wong
#               2015      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

dist_bin_SCRIPTS = dbt3-pgxl-create-db \
		dbt3-pgxl-create-tables \
		dbt3-pgxl-drop-tables \
		dbt3-pgxl-dbstat \
		dbt3-pgxl-load-data \
		dbt3-pgxl-start-db \
		dbt3-pgxl-stop-db \
		dbt3-pgxl-time-statistics
