#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2015      Mark Wong
#               2015      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

dist_bin_SCRIPTS = dbt3-virtuoso-create-db \
		dbt3-virtuoso-create-tables \
		dbt3-virtuoso-dbstat \
		dbt3-virtuoso-drop-tables \
		dbt3-virtuoso-load-data \
		dbt3-virtuoso-load-test \
		dbt3-virtuoso-rf1 \
		dbt3-virtuoso-rf2 \
		dbt3-virtuoso-start-db \
		dbt3-virtuoso-stop-db \
		dbt3-virtuoso-time-statistics
